--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,7 @@ $darkest: #333;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; 
 	color: $lightest;
 	line-height: 1.2;
+	overflow: hidden;
 	
 	button {
 		cursor: pointer;
